//
// Copyright Â© 2019 Apple Inc. and the ServiceTalk project authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//   http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

import "test_shared.proto";

option java_multiple_files = false;
option java_package = "io.servicetalk.grpc.protoc.test.single";
option java_outer_classname = "HelloWorldProto";

package test.single;

// The greeting service definition.
service Greeter {
    // /*
    //*/
    // @hello
    // <open tag
    // >close tag
    // &foo
    // \bar
    // /hello
    rpc SayHello (UserRequest) returns (HelloReply) {}
    rpc SayHelloToFromMany (stream UserRequest) returns (stream HelloReply) {}
    rpc SayHelloToMany (UserRequest) returns (stream HelloReply) {}
    rpc SayHelloFromMany (stream UserRequest) returns (HelloReply) {}
}

// The farewell service definition.
service Fareweller {
    rpc SayGoodbye (UserRequest) returns (test.shared.SharedReply) {}
    rpc GetAllUntils (test.shared.Generic.Empty) returns (stream test.shared.Untils) {
        option deprecated = true;
    }
}

// The request message containing the user's name.
message UserRequest {
    string name = 1;

    optional int32 value = 2;
}

// The response message containing the greetings
message HelloReply {
    string message = 1;
}
